--- a/index.html
+++ b/index.html
@@ -485,6 +485,32 @@
             </li>
           </ul>
         </div>
+        <form
+          name="newsletter-in-footer-form"
+          method="post"
+          action="javascript:void(0);"
+          novalidate
+        >
+          <div class="newsletter-in-footer">
+            <p class="newsletter-in-footer-title">Zapisz się do newslettera</p>
+            <div class="newsletter-input-container">
+            <div class="newsletter-input">
+              <input
+                type="email"
+                name="newsletter-email"
+                id="newsletter-email"
+                placeholder="E-mail"
+              />
+            </div>
+            <button type="submit" class="blue-btn">
+              Zapisz się
+              <svg class="newsletter-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+            </div>
+          </div>
+        </form>
       </div>
     </footer>
 
@@ -508,7 +534,13 @@
           </button>
         </div>
         <div class="form">
-          <form name="signup-form" autocomplete="off" method="post" novalidate action="javascript:void(0);">
+          <form
+            name="signup-form"
+            autocomplete="off"
+            method="post"
+            novalidate
+            action="javascript:void(0);"
+          >
             <p class="form-header">Zostaw swoje dane w formularzu poniżej</p>
             <label class="signup-form-label" for="user-name">Imię</label>
             <div class="signup-form-input">
@@ -543,7 +575,12 @@
               placeholder="Wprowadź tekst"
             ></textarea>
             <label class="signup-form-label-regulations">
-              <input class="signup-form-checkbox visualy-hidden" type="checkbox" name="regulations" id="regulations" />
+              <input
+                class="signup-form-checkbox visualy-hidden"
+                type="checkbox"
+                name="regulations"
+                id="regulations"
+              />
               <span class="regulations-description">
                 Oświadczam iż akceptuję <a href="#">Regulamin</a> i
                 <a href="#">Politykę Prywatności</a>
