--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <a class="logo-header link" href="index.html"
             >Web<span>Studio</span></a
           >
+
           <!--Menu-->
           <nav class="navigation">
             <ul class="navigation-list list">
@@ -43,6 +44,7 @@
               </li>
             </ul>
           </nav>
+
           <!--Contacts link-->
           <ul class="contact-list list">
             <li>
@@ -431,9 +433,10 @@
       </section>
     </main>
 
-    <!--Footer-->
+    <!--FOOTER-->
     <footer>
       <div class="container">
+        <!--Section with contacts-->
         <div class="contacts">
           <a class="logo-footer link" href="/">Web<span>Studio</span></a>
           <address class="adres-footer">
@@ -452,6 +455,8 @@
             </li>
           </ul>
         </div>
+
+        <!--Section with social media-->
         <div class="social-in-footer">
           <p class="social-list-footer-title">Dołącz do nas</p>
           <ul class="social-list-footer list">
@@ -485,6 +490,8 @@
             </li>
           </ul>
         </div>
+
+        <!--Newsletter section-->
         <form
           name="newsletter-in-footer-form"
           method="post"
@@ -494,27 +501,28 @@
           <div class="newsletter-in-footer">
             <p class="newsletter-in-footer-title">Zapisz się do newslettera</p>
             <div class="newsletter-input-container">
-            <div class="newsletter-input">
-              <input
-                type="email"
-                name="newsletter-email"
-                id="newsletter-email"
-                placeholder="E-mail"
-              />
-            </div>
-            <button type="submit" class="blue-btn">
-              Zapisz się
-              <svg class="newsletter-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-icon-send"></use>
-              </svg>
-            </button>
+              <div class="newsletter-input">
+                <input
+                  type="email"
+                  name="newsletter-email"
+                  id="newsletter-email"
+                  placeholder="E-mail"
+                  maxlength="40"
+                />
+              </div>
+              <button type="submit" class="blue-btn">
+                Zapisz się
+                <svg class="newsletter-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
             </div>
           </div>
         </form>
       </div>
     </footer>
 
-    <!--Modal window-->
+    <!--MODAL WINDOW-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <div class="modal-close-btn">
@@ -533,6 +541,7 @@
             </svg>
           </button>
         </div>
+        <!--Singup form-->
         <div class="form">
           <form
             name="signup-form"
@@ -547,7 +556,12 @@
               <svg class="signup-form-icon" width="12" height="12">
                 <use href="./images/icons.svg#icon-name-form"></use>
               </svg>
-              <input type="text" name="user-name" id="user-name" />
+              <input
+                type="text"
+                name="user-name"
+                id="user-name"
+                maxlength="20"
+              />
             </div>
 
             <label class="signup-form-label" for="phone-user">Telefon</label>
@@ -555,7 +569,12 @@
               <svg class="signup-form-icon" width="13" height="13">
                 <use href="./images/icons.svg#icon-phone-form"></use>
               </svg>
-              <input type="tel" name="phone-user" id="phone-user" />
+              <input
+                type="tel"
+                name="phone-user"
+                id="phone-user"
+                maxlength="15"
+              />
             </div>
 
             <label class="signup-form-label" for="email-user">Email</label>
@@ -563,7 +582,12 @@
               <svg class="signup-form-icon" width="15" height="12">
                 <use href="./images/icons.svg#icon-mail-form"></use>
               </svg>
-              <input type="email" name="email-user" id="email-user" />
+              <input
+                type="email"
+                name="email-user"
+                id="email-user"
+                maxlength="40"
+              />
             </div>
 
             <label class="signup-form-label" for="comment">Komentarz</label>
@@ -580,6 +604,7 @@
                 type="checkbox"
                 name="regulations"
                 id="regulations"
+                maxlength="400"
               />
               <span class="regulations-description">
                 Oświadczam iż akceptuję <a href="#">Regulamin</a> i
