--- a/portfolio.html
+++ b/portfolio.html
@@ -387,6 +387,24 @@
             </li>
           </ul>
         </div>
+
+        <!--Newsletter section-->
+        <form name="newsletter-in-footer-form" method="post" action="javascript:void(0);" novalidate>
+          <div class="newsletter-in-footer">
+            <p class="newsletter-in-footer-title">Zapisz się do newslettera</p>
+            <div class="newsletter-input-container">
+              <div class="newsletter-input">
+                <input type="email" name="newsletter-email" id="newsletter-email" placeholder="E-mail" maxlength="40" />
+              </div>
+              <button type="submit" class="blue-btn">
+                Zapisz się
+                <svg class="newsletter-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
