przebudowanie grida na stronie głównej

--- a/index.html
+++ b/index.html
@@ -85,59 +85,53 @@
       <!--Section with white background-->
       <section class="section">
         <div class="container">
-          <div class="strengths">
-            <ul class="strengths-icons-list list">
-              <li class="strengths-icons-list-item">
+          <div class="grid">
+            <div class="grid-item">
+              <div class="strengths-box">
                 <svg class="strengths-icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
-              </li>
-              <li class="strengths-icons-list-item">
+              </div>
+
+              <h3 class="grid-item-title">LOREM IPSUM</h3>
+              <p class="grid-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </div>
+
+            <div class="grid-item">
+              <div class="strengths-box">
                 <svg class="strengths-icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
-              </li>
-              <li class="strengths-icons-list-item">
+              </div>
+              <h3 class="grid-item-title">LOREM IPSUM</h3>
+              <p class="grid-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </div>
+
+            <div class="grid-item">
+              <div class="strengths-box">
                 <svg class="strengths-icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
-              </li>
-              <li class="strengths-icons-list-item">
+              </div>
+              <h3 class="grid-item-title">LOREM IPSUM</h3>
+              <p class="grid-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </div>
+
+            <div class="grid-item">
+              <div class="strengths-box">
                 <svg class="strengths-icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
-              </li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="container">
-          <div class="grid">
-            <div class="grid-item">
-              <h3 class="grid-item-title">LOREM IPSUM</h3>
-              <p class="grid-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et malesuada
-              </p>
-            </div>
-
-            <div class="grid-item">
-              <h3 class="grid-item-title">LOREM IPSUM</h3>
-              <p class="grid-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et malesuada
-              </p>
-            </div>
-
-            <div class="grid-item">
-              <h3 class="grid-item-title">LOREM IPSUM</h3>
-              <p class="grid-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et malesuada
-              </p>
-            </div>
-
-            <div class="grid-item">
+              </div>
               <h3 class="grid-item-title">LOREM IPSUM</h3>
               <p class="grid-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
